# jebp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  jebp.c  jebp.h  jebpview.c  meson.build  meson_options.txt
.github/workflows/: push.yml
cross/: aarch64-linux-gnu.ini  arm-linux-gnueabi.ini  arm-linux-gnueabihf.ini  i686-linux-gnu.ini  x86_64-w64-mingw32.ini
dev/: CMakeLists.txt  credits.md  jebptest.c
dev/toolchain/: aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  i686-linux-gnu.cmake  x86_64-w64-mingw32.cmake
fuzz/: fuzz.c
test/: Makefile  test_alloc.c  test_file.c  test_memory.c  test_noarch.c  test_util.h
test/lossless/: credits.txt
test/sys/stdio/: stdio.h
test/sys/stdlib/: stdlib.h
